Trying to get the front axis pos

--- a/bot/bringup/config/carlikebot_controllers.yaml
+++ b/bot/bringup/config/carlikebot_controllers.yaml
@@ -25,5 +25,5 @@ bicycle_steering_controller:
     enable_odom_tf: true
     twist_covariance_diagonal: [0.0, 7.0, 14.0, 21.0, 28.0, 35.0]
     pose_covariance_diagonal: [0.0, 7.0, 14.0, 21.0, 28.0, 35.0]
-    position_feedback: false
+    position_feedback: true # test
     use_stamped_vel: true
