--- a/bot/package.xml
+++ b/bot/package.xml
@@ -21,6 +21,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>libserial-dev</depend>
+  <depend>std_msgs</depend>
 
   <exec_depend>bicycle_steering_controller</exec_depend>
   <exec_depend>controller_manager</exec_depend>
